[package]
name = "imxrt-usbd"
version = "0.3.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
repository = "https://github.com/imxrt-rs/imxrt-usbd"
edition.workspace = true
license = "MIT OR Apache-2.0"
keywords = ["imxrt", "nxp", "embedded", "usb"]
categories = ["embedded", "no-std"]
readme = "README.md"
description = """
USB driver for NXP iMX RT processors
"""
exclude = [
    ".github/*",
    ".gitignore",
]

[dependencies]
bitflags = "2"
cortex-m = "0.7.4"
ral-registers = "0.1"
usb-device = "0.3.1"

[dependencies.defmt-03]
package = "defmt"
version = "0.3"
optional = true

[features]
"defmt-03" = ["dep:defmt-03", "usb-device/defmt"]

[workspace]
exclude = ["i-need-min-cm"]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[workspace.package]
edition = "2021"

[profile.release]
overflow-checks = true
