[package]
name = "imxrt-usbd"
version = "0.4.0"
repository = "https://github.com/imxrt-rs/imxrt-usbd"
edition.workspace = true
license = "MIT OR Apache-2.0"
keywords = ["imxrt", "nxp", "embedded", "usb"]
categories = ["embedded", "no-std"]
readme = "README.md"
description = """
USB driver for NXP iMX RT processors
"""
exclude = [
    ".github/*",
    ".gitignore",
]

[dependencies]
bitflags = "2"
cortex-m = "0.7"
imxrt-ral = "0.6"
usb-device = "0.3"

[dependencies.defmt]
version = "1.0"
optional = true

[features]
defmt = ["dep:defmt", "usb-device/defmt"]

[dev-dependencies]
imxrt-ral = { version = "0.6", features = ["imxrt1011"] }

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
features = ["imxrt-ral/imxrt1011"]

[workspace.package]
edition = "2024"

[profile.release]
overflow-checks = true
