[package]
name = "imxrt-usbd-examples-teensy4"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
publish = false  # This is an example package

# The library we're demonstrating
[dependencies.imxrt-usbd]
path = "../../"
features = [
    "double-instance",  # Required to pair with imxrt-[hal|ral]/imxrt1062
    # "__log"  # Only for driver development and debugging
]

# Supporting other hardware access, start-up
[dependencies.imxrt-hal]
version = "0.4"
features = ["imxrt1062", "rt"]

# Runtime support
[dependencies.cortex-m-rt]
features = ["device"]
version = "0.6.13"

# Necessary for booting the Teensy 4
[dependencies.teensy4-fcb]
version = "0.3.0"

# Simple panic handler
[dependencies.teensy4-panic]
version = "0.1"
path = "../../../../teensy4-rs/bsp/teensy4-panic"
default-features = false

# Pin API
[dependencies.teensy4-pins]
version = "0.1"

# USB device
[dependencies.usb-device]
version = "0.2"

# USB CDC class
[dependencies.usbd-serial]
version = "0.1"

# Logging over UART
[dependencies.imxrt-uart-log]
version = "0.2"
path = "../../../uart-log"

# Logging configuration, and logging within the
# examples
[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[dependencies.cortex-m]
version = "0.7"

[[bin]]
name = "configured"
path = "src/configured.rs"

[[bin]]
name = "serial"
path = "src/serial.rs"

[lib]
name = "support"
path = "src/support.rs"

[[bin]]
name = "test_class"
path = "src/test_class.rs"

[patch.crates-io.usb-device]
path = "../../../usb-device"
