[package]
name = "imxrt-usbd-examples-teensy4"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
publish = false  # This is an example package

# The library we're demonstrating
[dependencies.imxrt-usbd]
path = "../../"
features = [
    "double-instance",  # Required to pair with imxrt-[hal|ral]/imxrt1062
    # "__log"  # Only for driver development and debugging
]

# Supporting other hardware access, start-up
[dependencies.imxrt-hal]
version = "0.4"
features = ["imxrt1062", "rt"]

# Runtime support
[dependencies.cortex-m-rt]
features = ["device"]
version = "0.6.13"

# Necessary for booting the Teensy 4
[dependencies.teensy4-fcb]
version = "0.3.0"

# Simple panic handler
#
# The 0.1 release, plus a patch to expose the S.O.S. blink
# routine independent of the panic handler. This lets us
# implement our own panic handler that logs over serial,
# yet still blinks the same way.
[dependencies.teensy4-panic]
git = "https://github.com/mciantyre/teensy4-rs.git"
rev = "9e5b3a3"
default-features = false

# Pin API
[dependencies.teensy4-pins]
version = "0.1"

# USB device
[dependencies.usb-device]
version = "0.2"

# USB CDC class
[dependencies.usbd-serial]
version = "0.1"

# Logging over UART
[dependencies.imxrt-uart-log]
version = "0.2"

# Logging configuration, and logging within the
# examples
[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[dependencies.cortex-m]
version = "0.7"

[[bin]]
name = "configured"
path = "src/configured.rs"

[[bin]]
name = "serial"
path = "src/serial.rs"

[lib]
name = "support"
path = "src/support.rs"

[[bin]]
name = "test_class"
path = "src/test_class.rs"

[patch.crates-io.usb-device]
git = "https://github.com/imxrt-rs/usb-device.git"
branch = "imxrt-test-class-support"
