[package]
name = "imxrt-usbd-examples-teensy4"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
publish = false  # This is an example package

# The library we're demonstrating
[dependencies.imxrt-usbd]
path = "../../"
features = [
    # "__log"  # Only for driver development and debugging
]

# Supporting other hardware access, start-up
[dependencies.teensy4-bsp]
version = "0.2"
default-features = false  # Disable the BSP's USB driver
features = ["rt"]

# Runtime support
[dependencies.cortex-m-rt]
features = ["device"]
version = "0.6.13"

# Simple panic handler
#
# The 0.1 release, plus a patch to expose the S.O.S. blink
# routine independent of the panic handler. This lets us
# implement our own panic handler that logs over serial,
# yet still blinks the same way.
[dependencies.teensy4-panic]
git = "https://github.com/mciantyre/teensy4-rs.git"
rev = "9e5b3a3"
default-features = false

# USB device
[dependencies.usb-device]
version = "0.2"

# USB CDC class
[dependencies.usbd-serial]
version = "0.1"

# Logging over UART
[dependencies.imxrt-uart-log]
version = "0.2"

# Logging configuration, and logging within the
# examples
[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[dependencies.cortex-m]
version = "0.7"

[[bin]]
name = "configured"
path = "src/configured.rs"

[[bin]]
name = "serial"
path = "src/serial.rs"

[lib]
name = "support"
path = "src/support.rs"

[[bin]]
name = "test_class"
path = "src/test_class.rs"
